--- a/Pertemuan-2/index.html
+++ b/Pertemuan-2/index.html
@@ -42,11 +42,50 @@
             </tr>
     </table>
 
-    <!--table colspan &rowspan dan size-->
+    <br>
+
+    <!--table colspan &rowspan-->
+    <table border="1">
+        <tr>
+            <th>No</th>
+            <th>NIM</th>
+            <th>Nama</th>
+            <th>Prodi</th>
+            <th>Asdos</th>
+            <th colspan="5">Absen</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>F55123072</td>
+            <td>Asfita Saldarisya Nadjun</td>
+            <td>S1-Teknik Informatika</td>
+            <td rowspan="2">Pemrograman Web-1 Kelas C</td>
+            <td>Hadir</td>
+            <td>Sakit</td>
+            <td>Hadir</td>
+            <td>Hadir</td>
+            <td>Hadir</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>F55123074</td>
+            <td>Adelia Nur Sakinah</td>
+            <td>S1-Teknik Informatika</td>
+            <td>Alpa</td>
+            <td>Haidr</td>
+            <td>Hadir</td>
+            <td>Izin</td>
+            <td>Hadir</td>
+        </tr>
+    </table>
+
+    <br>
+
+    <!--size table-->
     <table border="1" width="100%">
-        <tr> 
-            <th height="40 px">No</th>
-            <th>Nim</th>
+        <tr>
+            <th height="40px">No</th>
+            <th>NIM</th>
             <th width="40%">Nama</th>
             <th>Prodi</th>
             <th>Asdos</th>
@@ -64,7 +103,20 @@
             <td>Hadir</td>
             <td>Hadir</td>
         </tr>
+        <tr>
+            <td>2</td>
+            <td>F55123074</td>
+            <td>Adelia Nur Sakinah</td>
+            <td>S1-Teknik Informatika</td>
+            <td>Alpa</td>
+            <td>Haidr</td>
+            <td>Hadir</td>
+            <td>Izin</td>
+            <td>Hadir</td>
+        </tr>
     </table>
+
+    <br>
 
     <!--Form-->
     <form action="">
@@ -103,6 +155,8 @@
         <input type="reset" name="reset" id="reset"><br>
     </form>
 
+    <br>
+
     <!--Input Lain -->
     <label>Teks Area</label><br>
     <textarea name="alamat" id="alamat" cols="30" rows="10"></textarea><br>
@@ -128,7 +182,7 @@
     <legend>Pendaftaran</legend>
     <label>Nama Lengkap</label><br>
     <input type="text" name="" id=""><br>
-    <label>Umur</label><br>
+    <label>Umur</label><br>gi
     <input type="number" name="" id=""><br><br>
     <button>Daftar</button>
     </fieldset>
